# derby

./: CMakeLists.txt  main.cpp
definitions/: definitions.sqlite  definitions.sqlite.backup
images/: .directory
rc/: images.qrc
src/: CMakeLists.txt  definitionsdb.h  definitionsqsqlquerymodel.cpp  definitionsqsqlquerymodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
